# resto_support

./: .gitignore  Dockerfile  README.md  docker-compose.yml  guidelines.md  main.py  pyproject.toml  requirements.txt
data/: .env  .env.example  config.py  texts.py
data/settings/: base.py  setting.py
entities/: models.py
entities/database/: __init__.py  base.py  tasks.py
entities/redis/: Client.py
entities/redis/models/: Base.py  Message.py  Task.py  base.py  message.py  tasks.py
entities/states/: StateModels.py  states.py
filters/: Filters.py
handlers/: __init__.py
handlers/supports/: __init__.py  channels.py
handlers/users/: __init__.py  menu.py  tasks.py
messages/: start_mes.md
services/: GetMessage.py  keyboards.py  logger.py  middleware.py
services/Bitrix/: Base.py  Client.py
services/scheduler/: scheduler.py  start.py
tests/: test_status_task.py
